--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -8,5 +8,12 @@
     <string name="howmuch">How Much</string>
     <string name="when">When</string>
     <string name="where">Where</string>
+    
+    <string name="sending_data">sending data</string>
+    
+    
+    
+    <string name="parse_app_id">MZQdm0ZZ0EaTYYE8GnuWlqWu2fzgwscDVtIU5cWs</string>
+  		<string name="parse_client_key">3LWN9ZFWmoqEzzkzStLbJzrxLXmSUosz54xrMfoD</string>
 
 </resources>
